--- a/evt-web.html
+++ b/evt-web.html
@@ -1,31 +1,35 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EVT Corp Challenge</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
       body {
         text-align: center;
         padding: 40px 0;
         background: #EBF0F5;
       }
-        h1 {
-          color: #88B04B;
-          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-          font-weight: 900;
-          font-size: 40px;
-          margin-bottom: 10px;
-        }
-        p {
-          color: #404F5E;
-          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-          font-size:20px;
-          margin: 0;
-        }
+      h1 {
+        color: #88B04B;
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        font-weight: 900;
+        font-size: 40px;
+        margin-bottom: 10px;
+      }
+      p {
+        color: #404F5E;
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        font-size: 20px;
+        margin: 0;
+      }
       i {
         color: #9ABC66;
         font-size: 100px;
         line-height: 200px;
-        margin-left:-15px;
+        margin-left: -15px;
       }
       .card {
         background: white;
@@ -35,11 +39,39 @@
         display: inline-block;
         margin: 0 auto;
       }
+      .visit-counter {
+        margin-top: 20px;
+        color: #6c757d;
+        font-size: 18px;
+      }
+      .github-button {
+        margin-top: 20px;
+      }
     </style>
-    <body>
+  </head>
+  <body>
+    <div class="card">
+      <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
+        <i class="checkmark">✓</i>
       </div>
-        <h1>Success</h1> 
-        <p>Your webpage is up and running</p>
+      <h1>Success</h1>
+      <p>Your webpage is up and running!</p>
+      <div class="github-button">
+        <a href="https://github.com/ishratrandhawa/EVT_Corp_Challenge_2024" class="btn btn-success">View Project on GitHub</a>
       </div>
-    </body>
+      <p class="visit-counter"></p>
+    </div>
+    <script>
+      // Visitor Counter
+      if (!localStorage.visitCount) {
+        localStorage.visitCount = 0;
+      }
+      localStorage.visitCount++;
+      document.addEventListener("DOMContentLoaded", () => {
+        const counter = document.querySelector(".visit-counter");
+        counter.innerText = `This page has been visited ${localStorage.visitCount} times.`;
+      });
+    </script>
+  </body>
 </html>
+
